--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>AWS Certified Cloud Practitioner</h2>
-									<p>I validated my expertise in cloud infrastrucure through mastery of various AWS services ranging from compute and storage to governance and billing. I am now working toward becoming an AWS Certified Solutions Architect.</p>
+									<h2>Research Assistant at Columbia University</h2>
+									<p>I work with esteemed faculty at Columbia's computer science department to propel the world into the future of computing.</p>
 									<ul class="actions">
-										<li><a href="https://aws.amazon.com/certification/certified-cloud-practitioner/" class="button">Learn more</a></li>
+										<li><a href="https://www.cs.columbia.edu/" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
