--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Research Assistant at Columbia University</h2>
-									<p>I work with esteemed faculty at Columbia's computer science department to propel the world into the future of computing.</p>
+									<h2>AWS Certified Cloud Practioner</h2>
+									<p>I demonstrated my cloud knowledge as an aspiring cloud professional working to clear the solutions architect exam.</p>
 									<ul class="actions">
 										<li><a href="https://www.cs.columbia.edu/" class="button">Learn more</a></li>
 									</ul>
