--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Cloud Specialist Intern at Minvest Finance</h2>
-									<p>I leverage AWS services to host the Minvest web-app and work on features like MinvestEd or the Minvest investment profile. I focus on continuous improvement while maintaining high availability, performance efficiency, and cost optimization through architecting Minvest's cloud infrastructure.</p>
+									<p>I leverage AWS services to host the Minvest web-app and work on features like MinvestEd or the Simvest paper trading platform.</p>
 									<ul class="actions">
 										<li><a href="https://www.minvestfinance.com/" class="button">Learn more</a></li>
 									</ul>
@@ -61,10 +61,10 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Software Engineering Fellow at Headstarter AI</h2>
-									<p>I plan to complete 5 projects in five months to hone my software engineering skills. I hope to either get 1000 people on a waitlist or 1000 accounts created or 1000 dollars in revenue.</p>
+									<h2>AWS Certified Solutions Architect</h2>
+									<p>I bolster my cloud computing expertise by earning the associate level certification</p>
 									<ul class="actions">
-										<li><a href="https://headstarter.co/" class="button">Learn more</a></li>
+										<li><a href="https://aws.amazon.com/free/?gclid=Cj0KCQjwlvW2BhDyARIsADnIe-I8aL_Qg0-UYpQFzATUOo5OFr4YbED_mUnLMleve9UU7YYrnJMlhBQaAtUsEALw_wcB&trk=6a4c3e9d-cdc9-4e25-8dd9-2bd8d15afbca&sc_channel=ps&ef_id=Cj0KCQjwlvW2BhDyARIsADnIe-I8aL_Qg0-UYpQFzATUOo5OFr4YbED_mUnLMleve9UU7YYrnJMlhBQaAtUsEALw_wcB:G:s&s_kwcid=AL!4422!3!651751059783!e!!g!!aws!19852662197!145019195897&all-free-tier.sort-by=item.additionalFields.SortRank&all-free-tier.sort-order=asc&awsf.Free%20Tier%20Types=*all&awsf.Free%20Tier%20Categories=*all" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -74,9 +74,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>AWS Certified Cloud Practioner</h2>
-									<p>I demonstrated my cloud knowledge as an aspiring cloud professional working to clear the solutions architect exam.</p>
+									<p>I demonstrated my cloud knowledge as an aspiring cloud professional.</p>
 									<ul class="actions">
-										<li><a href="https://www.cs.columbia.edu/" class="button">Learn more</a></li>
+										<li><a href="https://aws.amazon.com/free/?gclid=Cj0KCQjwlvW2BhDyARIsADnIe-I8aL_Qg0-UYpQFzATUOo5OFr4YbED_mUnLMleve9UU7YYrnJMlhBQaAtUsEALw_wcB&trk=6a4c3e9d-cdc9-4e25-8dd9-2bd8d15afbca&sc_channel=ps&ef_id=Cj0KCQjwlvW2BhDyARIsADnIe-I8aL_Qg0-UYpQFzATUOo5OFr4YbED_mUnLMleve9UU7YYrnJMlhBQaAtUsEALw_wcB:G:s&s_kwcid=AL!4422!3!651751059783!e!!g!!aws!19852662197!145019195897&all-free-tier.sort-by=item.additionalFields.SortRank&all-free-tier.sort-order=asc&awsf.Free%20Tier%20Types=*all&awsf.Free%20Tier%20Categories=*all" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
