--- a/index.html
+++ b/index.html
@@ -92,32 +92,32 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Computer Programming</h3>
-									<p>I know how to write code in the following languages: Python, Java, Javascript, Visual Basic, HTML, CSS, SQL.</p>
+									<p>I am proficient at writing code in the following languages: Python, Java, Javascript, Typescript, Visual Basic, HTML, CSS, SQL, MATLAB.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
 									<h3>Source Control</h3>
-									<p>I understand how to maintain continuous integration and development and I have expereince with Git.</p>
+									<p>I understand how to maintain continuous integration and delivery with Git/GitHub source control.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Application Programming Interfaces</h3>
-									<p>I can design APIs adhering to REST, utilize public APIs in my code, and test API endpoints using Postman.</p>
+									<p>I can design APIs adhering to the principles of REST, utilize public APIs in my code, and test API endpoints using Postman.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Cloud Computing</h3>
-									<p>I am familiar with cloud computing and can confidently architect cloud infrastrucutres across various vendors.</p>
+									<p>I am confident with cloud computing and can architect cloud infrastrucutres across various vendors.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Databases</h3>
-									<p>I can work with relational databases and NoSQL databases by using suitable schemas and queries.</p>
+									<p>I can interact with relational databases and NoSQL databases by using suitable schemas and queries.</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
 									<h3>Artificial Intelligence</h3>
-									<p>I am learning to use artificial intelligence as a tool to my work by focusing on prompt engineering.</p>
+									<p>I am ready to use artificial intelligence as a tool to my work by focusing on prompt engineering and generative AI.</p>
 								</section>
 							</div>
 							<ul class="actions">
